remove edit and delete button on lispost_user template, and comment deleteform function on Blog_userController

--- a/app/Resources/views/blog_user/index.html.twig
+++ b/app/Resources/views/blog_user/index.html.twig
@@ -22,7 +22,7 @@
                 <td>
                     <ul>
                         <li>
-                            <a href="{{ path('post_show', { 'id': blog_post.id }) }}">show</a>
+                            <a href="{{ path('blogpost_show', { 'id': blog_post.id }) }}">show</a>
                         </li>
                     </ul>
                 </td>
