--- a/app/Resources/views/blog_user/index.html.twig
+++ b/app/Resources/views/blog_user/index.html.twig
@@ -1,34 +1,46 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Blog_user les listpost</h1>
 
-    <table>
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Title</th>
-                <th>Content</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for blog_post in blog_posts %}
-            <tr>
-                <!--'blogpost_show' de userController -->
-                <td><a href="{{ path('blogpost_show', { 'id': blog_post.id }) }}">{{ blog_post.id }}</a></td>
-                <td>{{ blog_post .title }}</td>
-                <td>{{ blog_post.content }}</td>
-                <td>
-                    <ul>
-                        <li>
-                            <a href="{{ path('blogpost_show', { 'id': blog_post.id }) }}">show</a>
-                        </li>
-                    </ul>
-                </td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+    <div class="row">
+        <div class="col-lg-8 col-md-10 mx-auto">
+            <h1>Reybeka</h1>
+        </div>
+
+    </div>
+
+    <div class="row">
+        <div class="col-lg-8 col-md-10 mx-auto">
+            <img src="../../img/Photo_Reybeka.png" alt="photo Reybeka Peyrat">
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-lg-8 col-md-10 mx-auto">
+
+            {% for blog_post in blog_posts %}
+                <div class="post-preview">
+                    <a href="post/{{ blog_post.id }}">
+                        <p hidden>je suis un numéro id:{{blog_post.id}}</p>
+                        <h2 class="post-title">
+                            {{ blog_post.title }}
+                        </h2>
+                        {#<p class="post-meta">Posté le {{ blog_post.created }}</p>#}
+                        <h3 class="post-subtitle">
+                            {#je récupère le contenu en appliquant un truncate pour le châpo#}
+                           {# {{ blog_post.contenu | truncate(100) }} #}
+                            {{ blog_post.content }}
+                        </h3>
+                        {#<a class="btn"  href="{{path('blog_post', {id: Post.id})}}">Lire plus...</a>#}
+                        <a class="btn"  href="{{path('blogpost_show', {id: blog_post.id})}}">Lire plus...</a>
+                    </a>
+
+                </div>
+                <hr>
+            {% endfor %}
+
+            <div class="clearfix"><a class="btn btn-primary float-right" href="#">En haut &rarr;</a></div>
+        </div>
+    </div>
 
 {% endblock %}
