--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -70,10 +70,11 @@
                     <div class="col-lg-8 col-md-10 mx-auto">
                         <ul class="list-inline text-center">
                             <li class="list-inline-item">
-                                <a href="#">
+                                <a href="https://twitter.com/Gloril7?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @Gloril7</a>
+                                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                 <span class="fa-stack fa-lg">
                   <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-twitter fa-stack-1x fa-inverse">Twitter</i>
+                  <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
                 </span>
                                 </a>
                             </li>
@@ -86,7 +87,7 @@
                                 </a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="#">
+                                <a href="https://github.com/Fossette7/blogSymfony">
                 <span class="fa-stack fa-lg">
                   <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fab fa-github fa-stack-1x fa-inverse">Github</i>
