--- a/app/Resources/views/blog_user/show.html.twig
+++ b/app/Resources/views/blog_user/show.html.twig
@@ -6,16 +6,14 @@
         <div class="col-lg-8 col-md-10 mx-auto">
             {# je crée ma zone de post#}
             <div class="post-preview">
-                <a href="post/{{ blog_post.id }}">
                     <p hidden>je suis un numéro id:{{blog_post.id}} </p>
                     <h2 class="post-title">
                         {#je récupère le titre du post#}
                         {{ blog_post.title }}
                     </h2>
-                    <h3 class="post-subtitle">
+                    <p class="post-subtitle">
                         {{ blog_post.content }}
-                    </h3>
-                </a>
+                    </p>
                 {#j'ajoute la date de mise en ligne du post#}
                 {#<p class="post-meta">Posté le {{ blog_post.date_creation | date('d/m/Y', 'Europe/Paris') }}</p>#}
             </div>
@@ -23,7 +21,8 @@
             <div class="row">
                 <div class="col-lg-4 col-md-6 mx-auto">
                     {# lire les commentaires existants#}
-                   {# {% for blog_comment in blog_comments %}
+                   {# <a href="{{ path('comment_index') }}">lire</a>
+                    {% for blog_comment in blog_comments %}
                     <tr>
                         <td><a href="{{ path('comment_show', { 'id': blog_comment.id }) }}">{{ blog_comment.id }}</a></td>
                         <td>{{ blog_comment.author }}</td>
