--- a/app/Resources/views/blog_user/show.html.twig
+++ b/app/Resources/views/blog_user/show.html.twig
@@ -19,39 +19,39 @@
             </div>
             {# je crée ma partie commentaire#}
             <div class="row">
-                <div class="col-lg-4 col-md-6 mx-auto">
+                <div class="col-lg-12 col-md-10 mx-auto">
+                    {# je crée ma zone de commentaire#}
+                    <div class="comment-preview">
                     {# lire les commentaires existants#}
-                   {# <a href="{{ path('comment_index') }}">lire</a>
-                    {% for blog_comment in blog_comments %}
+                        <hr>
+                    {% for blog_comment in blog_post.BlogComments %}
                     <tr>
                         <td><a href="{{ path('comment_show', { 'id': blog_comment.id }) }}">{{ blog_comment.id }}</a></td>
                         <td>{{ blog_comment.author }}</td>
                         <td>{{ blog_comment.content }}</td>
                         <td>{% if blog_comment.createdAt %}{{ blog_comment.createdAt|date('Y-m-d H:i:s') }}{% endif %}</td>
                         <td>
-                     {% endfor %} #}
+                            <hr>
+                     {% endfor %}
+                    </div>
 
                     <h4>Commentez ce blog post</h4>
-                </div>
                 <form name="ajouter un commentaire" method="post" action="">
                     <div class="container">
-                        <div class="col-lg-4 col-md-6 mx-auto">
+                        <div class="col-lg-3 col-md-6 mx-auto">
                             Pseudo: <input type="text" name="pseudo"/> </br>
-
                             Votre commentaire <textarea name="comment" placeholder="Votre commentaire"> </textarea> </br>
                         </div>
-                            <h5>Commentaire</h5>
-                        {# {{ oneComment.commentaire }} pour afficher les commentaires
-                                            {% for oneComment in comments %}
-                                                 {{ oneComment.texte }}
-                                                 <hr>
-                                             {% endfor %} #}
+
+
                         <div class="col-lg-4 col-md-6 mx-auto">
                             <input type="submit" name="valider" class="btn btn-primary" value="Valider"/>
                         </div>
                     </div>
                 </form>
             </div>
+
+
             <div class="container"><a class="btn btn-primary float-right" href="{{path('blog_user_index')}}">Retour à l'accueil </a></div>
         </div>
     </div>
