--- a/app/Resources/views/blog_user/show.html.twig
+++ b/app/Resources/views/blog_user/show.html.twig
@@ -34,10 +34,13 @@
                                 </div>
                             </div>
                             <hr>
+                        {% else %}
+                            <p> Il n'y a aucun commentaire.</p>
                         {% endfor %}
                     </section>
 
-                    <h4>Commentez ce blog post</h4>
+                    <h4>Ajouter un commentaire</h4>
+            {{ form(formComment) }}
                 <form name="ajouter un commentaire" method="post" action="">
                     <div class="container">
                         <div class="col-lg-6 col-md-6 mx-auto">
