refacto methods name Post/Comment- 1step entity change name
	fetch = +refs/heads/*:refs/remotes/origin/*

--- a/app/Resources/views/blog_post/edit.html.twig
+++ b/app/Resources/views/blog_post/edit.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Blog_post edit</h1>
+    <h1>BlogPost edit</h1>
 
     {{ form_start(edit_form) }}
         {{ form_widget(edit_form) }}
