--- a/app/Resources/views/blog_user/show.html.twig
+++ b/app/Resources/views/blog_user/show.html.twig
@@ -9,7 +9,7 @@
                     <p hidden>je suis un numéro id:{{blog_post.id}} </p>
                         <h2 class="post-title">
                         {#je récupère le titre du post#}
-                        {{ blog_post.title }}
+                        {{ blogPost.title }}
                         </h2>
                     <p class="post-subtitle">
                         {{ blog_post.content }}
