--- a/app/Resources/views/blog_post/new.html.twig
+++ b/app/Resources/views/blog_post/new.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Blog_post creation</h1>
+    <h1>BlogPost creation</h1>
 
     {{ form_start(form) }}
         {{ form_widget(form) }}
