rename property blogPost in Comment Entity

--- a/app/Resources/views/home/show.html.twig
+++ b/app/Resources/views/home/show.html.twig
@@ -22,7 +22,7 @@
                     <section id="commentaires">
                         <h3>Commentaires</h3>
                         <hr>
-                        {% for blog_comment in blog_post.BlogComments %}
+                        {% for blog_comment in blog_post.Comments %}
                             <div class="comment">
                              <div class="row">
                                     <div class="col-3">
