--- a/app/Resources/views/home/index.html.twig
+++ b/app/Resources/views/home/index.html.twig
@@ -17,20 +17,19 @@
 
     <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-
-            {% for blog_post in blog_posts %}
+            {% for allPosts in eachPost %}
                 <div class="post-preview">
-                    <a href="{{ path('blogpost_show', { id:blog_post.id }) }}">
-                        <p hidden>je suis un numéro id:{{blog_post.id}}</p>
+                    <a href="{{ path('blogpost_show', { id:post.id }) }}">
+                        <p hidden>je suis un numéro id:{{post.id}}</p>
                         <h2 class="post-title">
                             {{ blog_post.title }}
                         </h2>
-                        <p>{{ blog_post.createdAt|date('d-m-Y H:i:s') }}</p>
+                        <p>{{ post.createdAt|date('d-m-Y H:i:s') }}</p>
                         {#<p class="post-meta">Posté le {{ blog_post.created }}</p>#}
                         <h3 class="post-subtitle">
                             {#je récupère le contenu en appliquant un truncate pour le châpo#}
                            {# {{ blog_post.contenu | truncate(100) }} #}
-                            {{ blog_post.content }}
+                            {{ post.content }}
                         </h3>
                         <a class="btn"  href="{{path('blogpost_show', {id: blog_post.id})}}">Lire plus...</a>
                     </a>
