--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -19,7 +19,7 @@
     {% block navBar %}
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand" href="{{ path('blog_user_index') }}">Mon blog</a>
+                <a class="navbar-brand" href="{{ path('home_index') }}">Mon blog</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
@@ -27,7 +27,7 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path('blog_user_index') }}">Home</a>
+                            <a class="nav-link" href="{{ path('home_index') }}">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/about">A propos</a>
