--- a/app/Resources/views/comment/index.html.twig
+++ b/app/Resources/views/comment/index.html.twig
@@ -1,32 +1,32 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Blog_comments list</h1>
+    <h1>Liste de commentaires</h1>
 
     <table>
         <thead>
             <tr>
                 <th>Id</th>
-                <th>Author</th>
-                <th>Content</th>
-                <th>Createdat</th>
+                <th>Pseudo</th>
+                <th>Contenu</th>
+                <th>crée le</th>
                 <th>Actions</th>
             </tr>
         </thead>
         <tbody>
-        {% for blog_comment in blog_comments %}
+        {% for comment in comments %}
             <tr>
-                <td><a href="{{ path('comment_show', { 'id': blog_comment.id }) }}">{{ blog_comment.id }}</a></td>
-                <td>{{ blog_comment.author }}</td>
-                <td>{{ blog_comment.content }}</td>
-                <td>{% if blog_comment.createdAt %}{{ blog_comment.createdAt|date('Y-m-d H:i:s') }}{% endif %}</td>
+                <td><a href="{{ path('comment_show', { 'id': comment.id }) }}">{{ comment.id }}</a></td>
+                <td>{{ comment.author }}</td>
+                <td>{{ comment.content }}</td>
+                <td>{% if comment.createdAt %}{{ comment.createdAt|date('Y-m-d H:i:s') }}{% endif %}</td>
                 <td>
                     <ul>
                         <li>
-                            <a href="{{ path('comment_show', { 'id': blog_comment.id }) }}">show</a>
+                            <a href="{{ path('comment_show', { 'id': comment.id }) }}">show</a>
                         </li>
                         <li>
-                            <a href="{{ path('comment_edit', { 'id': blog_comment.id }) }}">edit</a>
+                            <a href="{{ path('comment_edit', { 'id': comment.id }) }}">edit</a>
                         </li>
                     </ul>
                 </td>
@@ -37,7 +37,7 @@
 
     <ul>
         <li>
-            <a href="{{ path('comment_new') }}">Create a new blog_comment</a>
+            <a href="{{ path('comment_new') }}">Ajouter un nouveau commentaire</a>
         </li>
     </ul>
 {% endblock %}
