--- a/app/Resources/views/home/index.html.twig
+++ b/app/Resources/views/home/index.html.twig
@@ -17,21 +17,21 @@
 
     <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-            {% for allPosts in eachPost %}
+            {% for currentPost in allPosts %}
                 <div class="post-preview">
-                    <a href="{{ path('blogpost_show', { id:post.id }) }}">
-                        <p hidden>je suis un numéro id:{{post.id}}</p>
+                    <a href="{{ path('post_show', { id:currentPost.id }) }}">
+                        <p hidden>je suis un numéro id:{{currentPost.id}}</p>
                         <h2 class="post-title">
-                            {{ blog_post.title }}
+                            {{ currentPost.title }}
                         </h2>
-                        <p>{{ post.createdAt|date('d-m-Y H:i:s') }}</p>
+                        <p>{{ currentPost.createdAt|date('d-m-Y H:i:s') }}</p>
                         {#<p class="post-meta">Posté le {{ blog_post.created }}</p>#}
                         <h3 class="post-subtitle">
                             {#je récupère le contenu en appliquant un truncate pour le châpo#}
                            {# {{ blog_post.contenu | truncate(100) }} #}
-                            {{ post.content }}
+                            {{ currentPost.content }}
                         </h3>
-                        <a class="btn"  href="{{path('blogpost_show', {id: blog_post.id})}}">Lire plus...</a>
+                        <a class="btn"  href="{{path('home_post_show', {id: currentPost.id})}}">Lire plus...</a>
                     </a>
 
                 </div>
