refacto and add cascade=remove option in Post for deleting Post&Comment

--- a/app/Resources/views/comment/new.html.twig
+++ b/app/Resources/views/comment/new.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Blog_comment creation</h1>
+    <h1>Création d'un commentaire</h1>
 
     {{ form_start(form) }}
         {{ form_widget(form) }}
