--- a/app/Resources/views/comment/show.html.twig
+++ b/app/Resources/views/comment/show.html.twig
@@ -33,7 +33,7 @@
         </li>
         <li>
             {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
+                <button class="btn-primary" type="submit" value="Delete">
             {{ form_end(delete_form) }}
         </li>
     </ul>
