--- a/app/Resources/views/post/index.html.twig
+++ b/app/Resources/views/post/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>BlogPosts list</h1>
+    <h1>Liste des articles</h1>
 
     <table>
         <thead>
@@ -35,7 +35,7 @@
 
     <ul>
         <li>
-            <a href="{{ path('post_new') }}">Create a new BlogPost</a>
+            <a href="{{ path('post_new') }}">Créer un nouvel article</a>
         </li>
     </ul>
 {% endblock %}
