--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -7,6 +7,7 @@
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
         <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" type="text/css" href={{ asset('stylesheet.css') }} />
 
         <!-- Custom styles for this template -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -30,7 +31,7 @@
                             <a class="nav-link" href="{{ path('home_index') }}">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/about">A propos</a>
+                            <a class="nav-link" href="{{ path('about_index') }}">A propos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="login">Login</a>
