--- a/app/Resources/views/home/show.html.twig
+++ b/app/Resources/views/home/show.html.twig
@@ -6,7 +6,7 @@
         <div class="col-lg-8 col-md-10 mx-auto">
             {# je crée ma zone de post#}
             <div class="post-preview">
-                    <p hidden>je suis un numéro id:{{post.id}} </p>
+                    <p type="hidden">je suis un numéro id:{{post.id}} </p>
                         <h2 class="post-title">
                         {#je récupère le titre du post#}
                         {{ post.title }}
@@ -22,7 +22,7 @@
                     <section id="commentaires">
                         <h3>Commentaires</h3>
                         <hr>
-                        {% for comment in currentPost.Comments %}
+                        {% for comment in post.comments %}
                             <div class="comment">
                              <div class="row">
                                     <div class="col-3">
