--- a/app/Resources/views/home/index.html.twig
+++ b/app/Resources/views/home/index.html.twig
@@ -4,19 +4,6 @@
 
     <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-            <h1>Reybeka</h1>
-        </div>
-
-    </div>
-
-    <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-            <img src="{{ asset('img/Photo_Reybeka.png') }}" alt="photo Reybeka Peyrat"/>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
             {% for currentPost in allPosts %}
                 <div class="post-preview">
                     <a href="{{ path('post_show', { id:currentPost.id }) }}">
@@ -24,7 +11,7 @@
                         <h2 class="post-title">
                             {{ currentPost.title }}
                         </h2>
-                        <p>{{ currentPost.createdAt|date('d-m-Y H:i:s') }}</p>
+                        <p>Posté le {{ currentPost.createdAt|date('d-m-Y H:i:s') }}</p>
                         {#<p class="post-meta">Posté le {{ post.created }}</p>#}
                         <h3 class="post-subtitle">
                             {#je récupère le contenu en appliquant un truncate pour le châpo#}
