--- a/app/Resources/views/home/show.html.twig
+++ b/app/Resources/views/home/show.html.twig
@@ -15,7 +15,7 @@
                         {{ post.content }}
                     </p>
                 {#j'ajoute la date de mise en ligne du post#}
-                {#<p class="post-meta">Posté le {{ currentPost.date_creation | date('d/m/Y', 'Europe/Paris') }}</p>#}
+                <p class="post-meta">Posté le {{ post.createdAt | date('d-m-Y H:i:s') }}</p>
             </div>
 
             {# je crée ma partie commentaire#}
