update view post Admin, adding  in Entity Comment

--- a/app/Resources/views/post/show.html.twig
+++ b/app/Resources/views/post/show.html.twig
@@ -16,7 +16,7 @@
                     {{ post.content }}
                 </p>
                 {#j'ajoute la date de mise en ligne du post#}
-                <p class="post-meta">Posté le {{ post.createdAt | date('d/m/Y', 'Europe/Paris') }}</p>
+                <p class="post-meta">Posté le {{ post.createdAt | date('d/m/Y', 'H:i:s') }}</p>
             </div>
             <ul>
                 <li>
