--- a/app/Resources/views/post/index.html.twig
+++ b/app/Resources/views/post/index.html.twig
@@ -1,10 +1,15 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Liste des articles</h1>
 
     <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
+            <h1>Liste des articles</h1>
+            <ul>
+                <li>
+                    <a href="{{ path('post_new') }}">Créer un nouvel article</a>
+                </li>
+            </ul>
             {% for post in BlogPosts %}
                 <div class="post-preview">
                     <a href="{{ path('post_show', { id:post.id }) }}">
@@ -12,7 +17,7 @@
                         <h2 class="post-title">
                             {{ post.title }}
                         </h2>
-                        <p class="post-meta">Posté le {{ post.createdAt|date('d-m-Y H:i:s') }}</p>
+                        <p class="post-meta">Posté le {{ post.createdAt|date('d-m-Y') }}</p>
 
                         <h3 class="post-subtitle">
                             {#je récupère le contenu en appliquant un truncate pour le châpo#}
@@ -41,14 +46,9 @@
                     </td>
                     </tbody>
                 </table>
-                <ul>
-                    <li>
-                        <a href="{{ path('post_new') }}">Créer un nouvel article</a>
-                    </li>
-                </ul>
+
                 <hr>
             {% endfor %}
-
 
         </div>
     </div>
