--- a/app/Resources/views/home/show.html.twig
+++ b/app/Resources/views/home/show.html.twig
@@ -15,7 +15,7 @@
                         {{ post.content }}
                     </p>
                 {#j'ajoute la date de mise en ligne du post#}
-                <p class="post-meta">Posté le {{ post.createdAt | date('d-m-Y H:i:s') }}</p>
+                <p class="post-meta">Posté le {{ post.createdAt | date('d/m/Y \H:i:s') }}</p>
             </div>
 
             {# je crée ma partie commentaire#}
@@ -26,7 +26,7 @@
                             <div class="comment">
                              <div class="row">
                                     <div class="col-3">
-                                    {{ comment.author }} (<small>{{ comment.createdAt|date('d-m-Y H:i') }}</small>)
+                                    {{ comment.author }} (<small>{{ comment.createdAt|date('d/m/Y \H:i:s') }}</small>)
                                     </div>
                                     <div class="col-9">
                                     {{ comment.content | raw  }}
@@ -40,7 +40,7 @@
                     </section>
 
                     <h4>Ajouter un commentaire</h4>
-            {{ form(formComment) }}
+                        {{ form(formComment) }}
 
             <div class="container"><a class="btn btn-primary float-right" href="{{path('home_index')}}">Retour à l'accueil </a></div>
         </div>
