--- a/app/Resources/views/post/index.html.twig
+++ b/app/Resources/views/post/index.html.twig
@@ -5,11 +5,10 @@
     <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
             <h1>Liste des articles</h1>
-            <ul>
-                <li>
-                    <a href="{{ path('post_new') }}">Créer un nouvel article</a>
-                </li>
-            </ul>
+
+                <a type="button" class="btn btn-info"
+               href="{{ path('post_new') }}">Créer un nouvel article</a>
+
             {% for post in BlogPosts %}
                 <div class="post-preview">
                     <a href="{{ path('post_show', { id:post.id }) }}">
@@ -29,23 +28,11 @@
 
                 </div>
 
-                <table>
+                        <a type="button" class="btn btn-outline-secondary"
+                        href="{{ path('post_show', { 'id': post.id }) }}">visualiser</a>
 
-                    <tbody>
-                    <td>
-                        <tr>
-                    <ul>
-                        <li>
-                            <a href="{{ path('post_show', { 'id': post.id }) }}">show</a>
-                        </li>
-                        <li>
-                            <a href="{{ path('post_edit', { 'id': post.id }) }}">edit</a>
-                        </li>
-                    </ul>
-                    </tr>
-                    </td>
-                    </tbody>
-                </table>
+                        <a type="button" class="btn btn-outline-secondary"
+                        href="{{ path('post_edit', { 'id': post.id }) }}">modifier</a>
 
                 <hr>
             {% endfor %}
