--- a/app/Resources/views/post/index.html.twig
+++ b/app/Resources/views/post/index.html.twig
@@ -29,10 +29,10 @@
                 </div>
 
                         <a type="button" class="btn btn-outline-secondary"
-                        href="{{ path('post_show', { 'id': post.id }) }}">visualiser</a>
+                        href="{{ path('post_show', { 'id': post.id }) }}">Visualiser</a>
 
                         <a type="button" class="btn btn-outline-secondary"
-                        href="{{ path('post_edit', { 'id': post.id }) }}">modifier</a>
+                        href="{{ path('post_edit', { 'id': post.id }) }}">Modifier</a>
 
                 <hr>
             {% endfor %}
