--- a/app/Resources/views/post/show.html.twig
+++ b/app/Resources/views/post/show.html.twig
@@ -18,14 +18,18 @@
                 {#j'ajoute la date de mise en ligne du post#}
                 <p class="post-meta">Posté le {{ post.createdAt | date('d/m/Y \H:i:s') }}</p>
             </div>
-            <ul>
-                <li>
-                    <a href="{{ path('post_index') }}">Retour à la liste</a>
-                </li>
-                <li>
-                    <a href="{{ path('post_edit', { 'id': post.id }) }}">Modifier</a>
-                </li>
-            </ul>
+
+                <div>
+                       <p><a type="button" class="btn btn-outline-secondary"
+                             href="{{ path('post_index') }}">Retour à la liste</a>
+                       </p>
+
+                    <p><a type="button" class="btn btn-outline-success"
+                           href="{{ path('post_edit', { 'id': post.id }) }}">Modifier</a>
+                    </p>
+                </div>
+
+
         </div>
 
     </div>
