--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -34,7 +34,7 @@
                             <a class="nav-link" href="{{ path('about_index') }}">A propos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="login">Login</a>
+                            <a class="nav-link" href="{{ path('login') }}">Login</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="contact">Contact</a>
