--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -37,7 +37,7 @@
                             <a class="nav-link" href="{{ path('login') }}">Login</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact">Contact</a>
+                            <a class="nav-link" href="{{ path('contact') }}">Contact</a>
                         </li>
                     </ul>
                 </div>
