change bcrypt(not working) for sha5125

--- a/app/Resources/views/about/index.html.twig
+++ b/app/Resources/views/about/index.html.twig
@@ -3,32 +3,33 @@
 {% block body %}
 
     <div class="container">
-    <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-            <h1>Reybeka</h1>
-        </div>
+        <h1>Reybeka</h1>
+        <hr>
 
-    </div>
-
-    <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-            <img src="{{ asset('img/Photo_Reybeka.png') }}" alt="photo Reybeka Peyrat"/>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-            <h2>Mon histoire</h2>
-
-                        <a class="btn"  href="{{path('home_index')}}">Vers les articles...</a>
-                    </a>
-
+            <div class="row">
+                <div class="col-sm-3">
+                    <div class="row">
+                        <img src="{{ asset('img/Photo_Reybeka.png') }}" alt="photo Reybeka Peyrat"/>
+                        <h3><a href="{{ asset('img/CV-RP.pdf') }}">Un clic un CV</a></h3>
+                    </div>
                 </div>
-                <hr>
+
+
+
+                <div class="col-sm-9">
+                        <h2>Présentation</h2>
+                        <p>"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam                            rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt                                explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia                                     consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui                                 dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora                              incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum                              exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem                            vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui                           dolorem eum fugiat quo voluptas nulla pariatur?"</p>
+                </div>
+            </div>
     </div>
 
-            <div class="clearfix"><a class="btn btn-primary float-right" href="#">En haut ↑</a></div>
+        <div class="col-sm-3 offset-sm-9">
+            <a class="btn"  href="{{path('home_index')}}">Retour à l'accueil...</a>
+            <hr>
         </div>
+
+    <div class="clearfix">
+        <a class="btn btn-primary float-right" href="#">En haut ↑</a>
     </div>
 
 {% endblock %}
