--- a/app/Resources/views/registration/registration.html.twig
+++ b/app/Resources/views/registration/registration.html.twig
@@ -9,15 +9,16 @@
 
 
     <div class="row">
-        <div class="col-sm-5">
+        <div class="col-sm-5 offset-sm-3">
             <div class="well">
                 <form action="{{ path('login') }}" method="post">
 
                     <fieldset>
                         <legend><i class="fa fa-lock" aria-hidden="true"></i></legend>
                         <div class="form-group">
+                            <h1>Espace membre</h1>
                             <label for="username">Pseudo:{#{{ 'label.username'|trans }}#}</label>
-                            <input type="text" id="username" name="username value"={{ last_username }} class="form-control"/>
+                            <input type="text" id="username" name="username" value="{{ last_username }}" class="form-control"/>
 
                         </div>
                         <div class="form-group">
