authentification, logout, redirection home,welcome user

--- a/app/Resources/views/home/show.html.twig
+++ b/app/Resources/views/home/show.html.twig
@@ -6,7 +6,7 @@
         <div class="col-lg-8 col-md-10 mx-auto">
             {# je crée ma zone de post#}
             <div class="post-preview">
-                    <p type="hidden">je suis un numéro id:{{post.id}} </p>
+                    <input type="hidden" {{post.id}} >
                         <h2 class="post-title">
                         {#je récupère le titre du post#}
                         {{ post.title }}
