--- a/app/Resources/views/post/index.html.twig
+++ b/app/Resources/views/post/index.html.twig
@@ -6,6 +6,7 @@
         <div class="col-lg-8 col-md-10 mx-auto">
             <h1>Liste des articles</h1>
 
+            <h2>Bienvenue {{ app.user.username }}</h2>
                 <a type="button" class="btn btn-info"
                href="{{ path('post_new') }}">Créer un nouvel article</a>
 
