--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -39,8 +39,14 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{{ path('contact') }}">Contact</a>
                         </li>
+                        <li class="nav-item">
+                            {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+                                <a class="link" href="{{ path('security_logout') }}">Logout</a>
+                            {% endif %}
+                        </li>
                     </ul>
                 </div>
+
             </div>
         </nav>
     {% endblock %}
