--- a/app/Resources/views/post/index.html.twig
+++ b/app/Resources/views/post/index.html.twig
@@ -11,6 +11,10 @@
             <br>
                 <a type="button" class="btn btn-info"
                href="{{ path('post_new') }}">Créer un nouvel article</a>
+                <a type="button" class="btn btn-info"
+               href="{{ path('comment_index') }}">Gérer les commentaires</a>
+                <a type="button" class="btn btn-info"
+               href="{{ path('user_index') }}">Gérer les utilisateurs</a>
 
             {% for post in BlogPosts %}
                 <div class="post-preview">
@@ -41,6 +45,7 @@
             {% endfor %}
 
         </div>
+        <div class="container"><a class="btn btn-primary float-right" href="{{path('post_index')}}">Retour au gestionnaire </a></div>
     </div>
 
 
