--- a/app/Resources/views/user/index.html.twig
+++ b/app/Resources/views/user/index.html.twig
@@ -42,4 +42,7 @@
             <a href="{{ path('user_new') }}">Create a new user</a>
         </li>
     </ul>
+    <div class="container">
+        <a class="btn btn-primary float-right" href="{{path('post_index')}}">Retour au gestionnaire </a>
+    </div>
 {% endblock %}
