--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -34,16 +34,17 @@
                             <a class="nav-link" href="{{ path('about_index') }}">A propos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path('login') }}">Login</a>
+                            {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+                                <a class="link" href="{{ path('security_logout') }}">Logout</a>
+                                {% else %}
+                                    <a class="nav-link" href="{{ path('login') }}">Login</a>
+                            {% endif %}
+
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{ path('contact') }}">Contact</a>
                         </li>
-                        <li class="nav-item">
-                            {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
-                                <a class="link" href="{{ path('security_logout') }}">Logout</a>
-                            {% endif %}
-                        </li>
+
                     </ul>
                 </div>
 
