send Flash message success after sending contact form

--- a/app/Resources/views/contact/index.html.twig
+++ b/app/Resources/views/contact/index.html.twig
@@ -5,6 +5,10 @@
 
     {{ form_start(form) }}
             {{ form_widget(form) }}
-            <input type="submit" class="btn btn-primary" value="envoyer"/>
+    {% for message in app.flashes('success') %}
+        <div class="flash-success">
+            {{ message }}
+        </div>
+    {% endfor %}
     {{ form_end(form) }}
 {% endblock %}
